# credit-card

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml
api/: app.py
data/: api_test.csv
models/: best_xgb_model.pkl  model_metadata.json
notebooks/: notebook.ipynb  playground.ipynb
reports/: metrics.json  model_comparison_results.csv
src/: config.py  data.py  evaluate.py  logger.py  predict.py  train.py
tests/: test_api.py  test_data_format.py
