[project]
name = "credit-card-fraud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "fastapi==0.104.1",
    "joblib==1.3.2",
    "matplotlib==3.10.6",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "pydantic==2.5.1",
    "pytest>=9.0.0",
    "python-dateutil==2.8.2",
    "python-multipart==0.0.6",
    "scikit-learn==1.3.2",
    "six==1.16.0",
    "uvicorn[standard]==0.24.0",
    "xgboost==2.0.3",
]
